# hexcell-android

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  test.rs
src-tauri/src/comp/: arithmetic.rs  conv_steps.rs  list.rs  mod.rs  num_sys.rs  syn_ops.rs  twos_comp.rs
src/components/: MenuItem.jsx
src/menus/: Arithmetic.jsx  BatchHandler.jsx  Complement.jsx  Conversion.jsx  Sidebar.jsx
src/screens/: Main.jsx  Splash.jsx
